# eacp-updater

./: .gitignore  CMakeLists.txt  CTXXFER.md  README.md
.github/op/: tamber-signing.env
.github/workflows/: build.yml  publish-remote-signed-demo.yml
CMake/: AppHubCatalog.cmake  EacpUpdaterApp.cmake  EacpUpdaterAppInfo.plist.in
Demos/: CMakeLists.txt  README.md
Demos/AppHub/: App.h  AppHubApi.h  AppHubInfo.plist.in  CMakeLists.txt  HOSTING-ABSTRACTION-PLAN.md  Main.cpp  PrivilegedHelperClient.h  REFACTOR-NOTES.md  apphub-publish.demo.json
Demos/AppHub/PrivilegedHelper/: Main.mm
Demos/AppHub/web/: index.html  package-lock.json  package.json
Demos/AppHub/web/src/: App.tsx  main.tsx  style.css
Demos/HelloWorldDemo/: CMakeLists.txt  Info.plist.in  Main.cpp
Demos/RealUpdateDemo/: CMakeLists.txt  Main.cpp
Docs/: PrivilegedAppHubUpdaterPlan.md
Lib/: CMakeLists.txt  README.md
Lib/eacp/: CMakeLists.txt
Lib/eacp/AppHub/: AppHubPlatform-Unsupported.cpp  AppHubPlatform-Windows.cpp  AppHubPlatform-macOS.mm  AppHubPlatform.h  AppHubTypes.h  CMakeLists.txt  LaunchGuardIpc-Unsupported.cpp  LaunchGuardIpc-Windows.cpp  LaunchGuardIpc-macOS.mm  LaunchGuardIpc.cpp  LaunchGuardIpc.h  LaunchPolicy.cpp  LaunchPolicy.h
Lib/eacp/Core/Utils/: SHA256.h
Lib/eacp/Hub/: CMakeLists.txt  Hub.cpp  Hub.h
Lib/eacp/Updater/: CMakeLists.txt  Updater-Unsupported.cpp  Updater-Windows.cpp  Updater-macOS.cpp  Updater.cpp  Updater.h
Lib/eacp/Updater/PrivilegedHelper/: PrivilegedHelper-Unsupported.cpp  PrivilegedHelper-macOS.mm  PrivilegedHelper.h
Scripts/: build-and-publish-app.mjs  generate-apphub-local-catalog.mjs  package-remote-signed-demo-assets.mjs  promote-apphub-channel.mjs  promote-channel.mjs  publish-artifact.mjs  publish-generated-catalog-app-version.mjs  publish-remote-catalog-app-version.mjs  publish-remote-demo-app-version.mjs  publish-remote-hub-version.mjs  run-apphub-updater-demo.mjs  run-local-apphub-self-update-demo.mjs  run-real-http-app-update-demo.mjs  sign-apphub-jobbless.mjs  update-apphub-channel.mjs
Scripts/ci/: authenticate-gcloud-from-1password.mjs  smoke-remote-artifact.mjs
Scripts/lib/: apphub-catalog.mjs  apphub-channel.mjs  apphub-generated-catalog.mjs  apphub-publish-config.mjs  cli.mjs  macos-signing.mjs
Scripts/resources/: app-bundle-component.plist.in
Tests/: CMakeLists.txt
Tests/Demos/: CMakeLists.txt
Tests/Demos/AppHub/: AppHubApiTests.cpp  CMakeLists.txt
Tests/Hub/: CMakeLists.txt  HubTests.cpp
Tests/Updater/: UpdaterTests.cpp
Tools/: CMakeLists.txt
Tools/UpdaterTool/: CMakeLists.txt  Main.cpp
